Implementando comentários javadoc.